Fix The Full-width image overlaps the drag handle (#2758)

--- a/theme/themes/pastanaga/extras/blocks.less
+++ b/theme/themes/pastanaga/extras/blocks.less
@@ -498,7 +498,7 @@ body.has-toolbar.has-sidebar-collapsed .ui.wrapper > .ui.inner.block.full {
 
 .drag.handle.wrapper {
   position: absolute;
-  z-index: 1;
+  z-index: 10;
   // top: 1px;
   left: 0;
   color: #b8c6c8;
@@ -509,6 +509,7 @@ body.has-toolbar.has-sidebar-collapsed .ui.wrapper > .ui.inner.block.full {
   }
 
   &:hover {
+    background-color: #edf1f2;
     color: @brown;
   }
 }
